# AIUsageTracker

./: .actionlint.yaml  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksbaseline.json  AGENTS.md  AGENT_PORT_SUMMARY.md  AIConsumptionTracker.slnx  AIUsageTracker.runsettings  AIUsageTracker.slnx  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Ctempbuild-warnings.txt  DESIGN.md  Directory.Build.props  FAILURE_MODES_ANALYSIS.md  HARDENING_ROADMAP.md  README.md  SONARQUBE.md  TODO.md  UI_slim.sln  UI_usage.sln  agent.db  appcast.xml  appcast_arm64.xml  appcast_x64.xml  appcast_x86.xml  build_error.txt  build_warnings.txt  build_warnings_after_fix.txt  build_warnings_all.txt  build_warnings_final.txt  changelog.md  cleanup-git-history-manual.md  cleanup-git-history.ps1  debug_log.txt  (+22 more)
.analyzer-gate/: scope.json
.claude/: settings.local.json
.githooks/: pre-commit
.github/: dependabot.yml  test-quarantine.txt
.papi/: PRODUCT_BRIEF.md
AIConsumptionTracker.Agent/: AIConsumptionTracker.Agent.csproj  Program.cs  openapi.yaml
AIConsumptionTracker.Agent.Tests/: AIConsumptionTracker.Agent.Tests.csproj  ExportServiceTests.cs  ProviderRefreshServiceTests.cs  UsageVisibilityFilterTests.cs
AIConsumptionTracker.CLI/: AIConsumptionTracker.CLI.csproj  AppJsonContext.cs  Program.cs
AIConsumptionTracker.Core/: AIConsumptionTracker.Core.csproj
AIConsumptionTracker.Infrastructure/: AIConsumptionTracker.Infrastructure.csproj
AIConsumptionTracker.Tests/: AIConsumptionTracker.Tests.csproj
AIConsumptionTracker.UI/: AIConsumptionTracker.UI.csproj  App.xaml  App.xaml.cs  DarkTheme.xaml  FileLogger.cs  GitHubLoginDialog.xaml  GitHubLoginDialog.xaml.cs  InfoDialog.xaml  InfoDialog.xaml.cs  LightTheme.xaml  MainWindow.xaml  MainWindow.xaml.cs  ProgressWindow.xaml  ProgressWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
AIConsumptionTracker.UI.Slim/: AIConsumptionTracker.UI.Slim.csproj  App.xaml  App.xaml.cs  InfoDialog.xaml  InfoDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  UiPreferencesStore.cs
AIConsumptionTracker.UI.Tests/: AIConsumptionTracker.UI.Tests.csproj  CollapsibleSectionsTests.cs  HeadlessWpfTests.cs  MainWindowTests.cs  PrivacySyncTests.cs  PrivacyTests.cs  UICollection.cs  UpdateProviderBarTests.cs
AIConsumptionTracker.Web/: AIConsumptionTracker.Web.csproj  Program.cs
AIConsumptionTracker.Web.Tests/: AIConsumptionTracker.Web.Tests.csproj  ScreenshotTests.cs
AIUsageTracker.CLI/: AIUsageTracker.CLI.csproj  AppJsonContext.cs  Program.cs
AIUsageTracker.Core/: AIUsageTracker.Core.csproj
AIUsageTracker.Infrastructure/: AIUsageTracker.Infrastructure.csproj  InternalsVisibleTo.cs
AIUsageTracker.Monitor/: AIUsageTracker.Monitor.csproj  InternalsVisibleTo.cs  Program.cs  openapi.yaml  providers.json
AIUsageTracker.Monitor.Tests/: AIUsageTracker.Monitor.Tests.csproj  AuthDiagnosticsSnapshotBuilderTests.cs  ConfigServiceExtendedTests.cs  ConfigServiceScanTests.cs  DatabaseMigrationServiceTests.cs  ExportServiceTests.cs  FileLoggerTests.cs  GroupedUsageProjectionServiceTests.cs  ImportServiceStreamLifetimeTests.cs  MonitorDiagnosticsSnapshotFactoryTests.cs  MonitorHttpApiIntegrationTests.cs  MonitorJobSchedulerTests.cs  MonitorLogPathResolverTests.cs  MonitorTestModuleInitializer.cs  PowerStateListenerTests.cs  ProviderConnectivityCheckServiceTests.cs  ProviderManagerLifecycleServiceTests.cs  ProviderRefreshCircuitBreakerServiceTests.cs  ProviderRefreshConfigLoadingServiceTests.cs  ProviderRefreshConfigSelectorTests.cs  ProviderRefreshJobSchedulerTests.cs  ProviderRefreshNotificationServiceTests.cs  ProviderRefreshServiceTests.cs  ProviderRefreshTelemetryManagerTests.cs  ProviderUsagePersistenceServiceTests.cs  ProviderUsageProcessingPipelineTests.cs  StartupSequenceServiceTests.cs  UsageAlertsServiceTests.cs  UsageVisibilityFilterTests.cs
AIUsageTracker.Tests/: AIUsageTracker.Tests.csproj  TestModuleInitializer.cs
AIUsageTracker.UI.Slim/: .editorconfig  AIUsageTracker.UI.Slim.csproj  App.Screenshots.cs  App.Themes.cs  App.TrayIcon.cs  App.xaml  App.xaml.cs  CardCatalogPermutations.cs  CardDesignerWindow.xaml  CardDesignerWindow.xaml.cs  CollapsibleHeaderPresentation.cs  CollapsibleHeaderPresentationCatalog.cs  DeterministicProviderScenario.cs  DeterministicProviderScenarioCatalog.cs  DisplayPreferencesService.cs  ErrorStatePresentation.cs  ErrorStatePresentationCatalog.cs  FetchDataSuccessPresentation.cs  FetchDataSuccessPresentationCatalog.cs  FixtureHistoryScenario.cs  FixtureUsageScenario.cs  FlatWindowCardBuilder.cs  GroupedUsageDisplayAdapter.cs  IUiPreferencesStore.cs  InfoDialog.xaml  InfoDialog.xaml.cs  KeyboardShortcutAction.cs  MainWindow.Polling.cs  (+93 more)
rust/: CURRENT_PROBLEMS.md  Cargo.toml  DESIGN.md  README.md  README_SYSTEM.md  RUNNING.md  agent.db  memory.md
rust/.cargo/: config.toml
rust/aic_agent/: Cargo.toml
rust/aic_agent/src/: config.rs  database.rs  main.rs  scheduler.rs
rust/aic_app/: Cargo.toml  agent.db  tauri.conf.json  validate.ps1  validate.sh
rust/aic_app/capabilities/: main.json
rust/aic_app/src/: commands.rs  index.html  info.html  main.rs  settings.html
rust/aic_app/tests/: commands_tests.rs
rust/aic_app_egui/: Cargo.toml
rust/aic_app_egui/src/: agent.rs  http_client.rs  icons.rs  main.rs  models.rs  tray.rs
rust/aic_cli/: Cargo.toml
rust/aic_cli/src/: main.rs
rust/aic_core/: Cargo.toml
rust/aic_core/src/: config.rs  github_auth.rs  models.rs
rust/aic_core/src/providers/: anthropic.rs  antigravity.rs  gemini.rs  generic_payg.rs  github_copilot.rs  kimi.rs  mistral.rs  mod.rs  openai.rs  opencode.rs  opencode_zen.rs  openrouter.rs  synthetic.rs  zai.rs
rust/aic_web/: Cargo.toml  README.md  main.rs
rust/aic_web/src/: main.rs
rust/aic_web/static/css/: dashboard.css
rust/aic_web/static/js/: dashboard.js
rust/aic_web/templates/: dashboard.html
rust/docs/: API.md  openapi.yaml
rust/scripts/: debug-build.bat  debug-build.ps1  test-agent.ps1
rust/test_data/: synthetic.json  zai_coding_plan.json
(+920 files in other folders)
