[package]
name = "aic_app"
version = "1.0.0"
edition = "2021"
description = "AI Consumption Tracker Desktop Application"
authors = ["AI Consumption Tracker Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/ai-consumption-tracker"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
aic_core = { path = "../aic_core" }
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
