[package]
name = "aic_app"
version = "0.5.0"
edition = "2021"
description = "AI Consumption Tracker Desktop Application"
authors = ["Alexander Brandt"]
license = "MIT"
repository = "https://github.com/rygel/AIConsumptionTracker"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
aic_core = { path = "../aic_core" }
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []


