[package]
name = "aic_app_egui"
version = "0.5.0"
edition = "2021"
description = "AI Consumption Tracker - egui UI"
authors = ["Alexander Brandt"]
license = "MIT"

[dependencies]
aic_core = { path = "../aic_core" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_extras = { version = "0.29", features = ["file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
dirs = "5.0"
parking_lot = "0.12"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"
tiny-skia = "0.11"
usvg = "0.44"

[target.'cfg(target_os = "windows")'.dependencies]
tray-item = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
tray-item = "0.10"

[profile.release]
opt-level = 3
lto = true
