[package]
name = "aic_cli"
version = "0.5.0"
edition = "2021"
description = "AI Consumption Tracker CLI"
authors = ["Alexander Brandt"]
license = "MIT"
repository = "https://github.com/yourusername/ai-consumption-tracker"

[[bin]]
name = "aic-cli"
path = "src/main.rs"

[dependencies]
aic_core = { path = "../aic_core" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }


