[package]
name = "aic_core"
version = "0.5.0"
edition = "2021"
description = "Core library for AI Consumption Tracker"
authors = ["Alexander Brandt"]
license = "MIT"
repository = "https://github.com/yourusername/ai-consumption-tracker"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
async-trait = "0.1"
regex = "1.10"
which = "6.0"

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
