[package]
name = "aic_web"
version = "1.0.0"
edition = "2021"
description = "Web dashboard for AI Consumption Tracker"
authors = ["AI Consumption Tracker Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/ai-consumption-tracker"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsql = "0.9.29"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
